[project]
name = "ecg-cl"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26,<2.3",
    "pandas>=2.1,<2.3",
    "qpsolvers<4.3",
    "scikit-learn>=1.4,<1.6",
    "torch==2.4.1",
    "torchaudio==2.4.1",
    "torchvision==0.19.1",
    "tqdm>=4.67.1",
    "wfdb>=4.3.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipykernel>=6.30.0",
    "jupyter>=1.1.1",
    "pytest>=8.4.1",
    "ruff>=0.12.5",
]
